[package]
name = "monotran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
